--- a/source/sass/themes/simrishamn.scss
+++ b/source/sass/themes/simrishamn.scss
@@ -18,4 +18,6 @@ $palette-5: #0095db;
 $palette-5-safe: #0069b4;
 $palette-5-text: #000;
 
+$override-base-font-family: "Open Sans", "Sans Serif";
+
 @import '../bootstrap';
