SIEW-108 Updated to newest Helsingborg version

--- a/source/sass-bem/_bootstrap.scss
+++ b/source/sass-bem/_bootstrap.scss
@@ -74,6 +74,8 @@
 // inject:utilities
 @import "./source/sass-bem/utilities/_align.scss";
 @import "./source/sass-bem/utilities/_clearfix.scss";
+@import "./source/sass-bem/utilities/_float.scss";
+@import "./source/sass-bem/utilities/_radius.scss";
 @import "./source/sass-bem/utilities/_spacing.scss";
 @import "./source/sass-bem/utilities/_text.scss";
 // endinject
